# VL_Softwareentwicklung

./: .gitignore  00_Einfuehrung.md  01_EinordnungCsharp.md  01_Grundlagen.md  01_Software.md  02_DotNet.md  02_Elemente.md  02_ElementeI.md  02_Versionsverwaltung.md  02_ZusammengesetzteDatentypen.md  03_ContinuousIntegration.md  03_CsharpGrundlagen.md  03_CsharpGrundlagenI.md  03_ElementeII.md  03_ElementsII.md  03_Klassen.md  03_VersionsverwaltungII.md  04_CsharpGrundlagenII.md  04_DotnetGrundlagen.md  04_FunktionenStrukturen.md  04_IO_Ausnahmebehandlung.md  05_CsharpElemente.md  05_CsharpGrundlagenIII.md  05_FunktionenStrukturen.md  05_FunktionenStrukturen0.md  06_CsharpElementeII.md  06_KlassenI.md  06_OOPI.md  06_OOP_Konzepte.md  06_ProgrammflussUndFunktionen.md  07_CsharpElementeIII.md  07_OOPGrundlagenI.md  07_OOPGrundlagenPython.md  07_OOPII.md  07_OOP_Csharp.md  07a_OOPGrundlagenPython.md  08_OOPGrundlagenI.md  08_OOPGrundlagenII.md  08_OOPIII.md  08_OOP_CsharpI.md  (+89 more)
.github/workflows/: GenerateMultiPdf.yml  GeneratePdf.yml  authors.txt  deploy_pages.yml  generate_pdfs.yml  header.tex  listings.tex  main.yml  preprocessing.py  trigger_overview.yml  update_liascript_badge.yml
archive/: 29_Anwendungen.md
code/01_EinordnungCsharp/: HelloWorld.cs  python_paradigms.py
code/01_Software/: README.md  improved.c  (+2 more)
code/16_Testen/Testen/unit-testing-example/CalcAppPython/: .gitignore  README.md  __init__.py  calc_wrapper.py  demo.py  main.py  pyproject.toml  setup.sh  test_calc.py
css/: styles.css
metadata/: 00_Einfuehrung.yaml
scripts/: preprocessing.py
(+269 files in other folders)
