[tool.poetry]
name = "calc-app-python"
version = "0.1.0"
description = "Python application using C# CalcService library via pythonnet"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
pythonnet = "^3.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
